--- a/res/values/fxaccount_styles.xml
+++ b/res/values/fxaccount_styles.xml
@@ -88,4 +88,16 @@
         <item name="android:src">@drawable/fxaccount_icon</item>
     </style>
 
+    <style name="FxAccountErrorItem">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">left</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:background">@drawable/fxaccount_textview_error_background</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:text">Error</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
 </resources>
