Bug 961184 - Part 3: Implement sending verification code from ConfirmAccount activity.

--- a/res/layout/fxaccount_confirm_account.xml
+++ b/res/layout/fxaccount_confirm_account.xml
@@ -50,6 +50,7 @@
         </TextView>
 
         <TextView
+            android:id="@+id/resend_confirmation_email_link"
             style="@style/FxAccountLinkItem"
             android:text="@string/fxaccount_verification_link_not_showing_up_offer_resend" />
 
