--- a/res/values/fxaccount_strings.xml
+++ b/res/values/fxaccount_strings.xml
@@ -4,23 +4,18 @@
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
 <resources>
-  <!-- Note to translators: year ranges are *always* considered old
-       enough to create an account.  Any years that are *not* old
-       enough to create an account must be appear as individual
-       numbers (so that they can be converted to a year and compared
-       to the current year). -->
     <string-array name="fxaccount_create_account_ages_array">
-        <item>1960s or earlier</item>
-        <item>1970s</item>
-        <item>1980s</item>
-        <item>1990s</item>
-        <item>2000</item>
-        <item>2001</item>
-        <item>2002</item>
-        <item>2003</item>
-        <item>2004</item>
-        <item>2005</item>
-        <item>2006</item>
-        <item>2007</item>
+        <item>@string/fxaccount_create_account_age_1960s</item>
+        <item>@string/fxaccount_create_account_age_1970s</item>
+        <item>@string/fxaccount_create_account_age_1980s</item>
+        <item>@string/fxaccount_create_account_age_1990s</item>
+        <item>@string/fxaccount_create_account_age_2000</item>
+        <item>@string/fxaccount_create_account_age_2001</item>
+        <item>@string/fxaccount_create_account_age_2002</item>
+        <item>@string/fxaccount_create_account_age_2003</item>
+        <item>@string/fxaccount_create_account_age_2004</item>
+        <item>@string/fxaccount_create_account_age_2005</item>
+        <item>@string/fxaccount_create_account_age_2006</item>
+        <item>@string/fxaccount_create_account_age_2007</item>
     </string-array>
 </resources>
