Bug 958893 - Part 5: Add debug button that forgets certificate.

--- a/res/layout/fxaccount_status.xml
+++ b/res/layout/fxaccount_status.xml
@@ -149,6 +149,12 @@
                 android:text="@string/fxaccount_status_debug_sync_button_label" />
 
             <Button
+                android:id="@+id/debug_forget_certificate_button"
+                style="@style/FxAccountButton"
+                android:layout_marginBottom="10dp"
+                android:text="@string/fxaccount_status_debug_forget_certificate_button_label" />
+
+            <Button
                 android:id="@+id/debug_require_password_button"
                 style="@style/FxAccountButton"
                 android:layout_marginBottom="10dp"
