Bug 959784 - Part 3: Display error and log exception in setup activities.

--- a/res/layout/fxaccount_create_account.xml
+++ b/res/layout/fxaccount_create_account.xml
@@ -49,7 +49,7 @@
             android:inputType="none" />
 
         <TextView
-            android:id="@+id/local_error"
+            android:id="@+id/remote_error"
             style="@style/FxAccountErrorItem" />
 
         <FrameLayout style="@style/FxAccountButtonLayout" >
