--- a/res/layout/fxaccount_update_credentials.xml
+++ b/res/layout/fxaccount_update_credentials.xml
@@ -26,6 +26,10 @@
 
         <include layout="@layout/fxaccount_email_password_view" />
 
+        <TextView
+            android:id="@+id/remote_error"
+            style="@style/FxAccountErrorItem" />
+
         <FrameLayout style="@style/FxAccountButtonLayout" >
 
             <ProgressBar
