--- a/res/values/fxaccount_styles.xml
+++ b/res/values/fxaccount_styles.xml
@@ -91,10 +91,13 @@
     </style>
 
     <style name="FxAccountErrorItem">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_marginLeft">@dimen/fxaccount_corner_radius</item>
+        <item name="android:layout_marginRight">@dimen/fxaccount_corner_radius</item>
+        <item name="android:layout_marginTop">30dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">left</item>
-        <item name="android:layout_margin">5dp</item>
         <item name="android:background">@drawable/fxaccount_textview_error_background</item>
         <item name="android:padding">5dp</item>
         <item name="android:text">Error</item>
@@ -115,7 +118,6 @@
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">20dp</item>
-        <item name="android:layout_marginTop">45dp</item>
     </style>
 
 </resources>
