--- a/res/layout/fxaccount_status.xml
+++ b/res/layout/fxaccount_status.xml
@@ -24,15 +24,6 @@
             style="@style/FxAccountSubHeaderItem" >
         </TextView>
 
-        <TextView
-            android:id="@+id/change_password"
-            style="@style/FxAccountLinkItem"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="@string/fxaccount_change_password" >
-        </TextView>
-
         <ViewFlipper
             android:id="@+id/connection_status_view"
             style="@style/FxAccountTextItem"
@@ -41,7 +32,7 @@
             android:layout_marginBottom="10dp" >
 
             <TextView
-                android:id="@+id/unverified_view"
+                android:id="@+id/needs_upgrade_view"
                 style="@style/FxAccountTextItem"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
