--- a/res/layout/fxaccount_create_account.xml
+++ b/res/layout/fxaccount_create_account.xml
@@ -43,7 +43,14 @@
             android:inputType="none" />
 
         <TextView
+            android:id="@+id/policy"
+            style="@style/FxAccountLinkifiedItem"
+            android:layout_marginTop="15dp"
+            android:text="@string/fxaccount_policy" />
+
+        <TextView
             android:id="@+id/remote_error"
+            android:layout_marginTop="10dp"
             style="@style/FxAccountErrorItem" />
 
         <FrameLayout style="@style/FxAccountButtonLayout" >
@@ -64,11 +71,6 @@
             android:layout_marginBottom="20dp"
             android:focusable="true"
             android:text="@string/fxaccount_sign_in_instead" />
-
-        <TextView
-            android:id="@+id/policy"
-            style="@style/FxAccountLinkifiedItem"
-            android:text="@string/fxaccount_policy" />
 
         <LinearLayout style="@style/FxAccountSpacer" />
 
