--- a/res/layout/fxaccount_sign_in.xml
+++ b/res/layout/fxaccount_sign_in.xml
@@ -45,6 +45,7 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:paddingLeft="10dp"
             android:paddingRight="10dp" >
