--- a/res/values/fxaccount_styles.xml
+++ b/res/values/fxaccount_styles.xml
@@ -15,10 +15,10 @@
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:paddingTop">25dp</item>
-        <item name="android:paddingLeft">12dp</item>
-        <item name="android:paddingRight">12dp</item>
-        <item name="android:paddingBottom">15dp</item>
+        <item name="android:paddingTop">30dp</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:paddingRight">20dp</item>
+        <item name="android:paddingBottom">30dp</item>
     </style>
 
     <style name="FxAccountSpacer">
@@ -29,9 +29,8 @@
     </style>
 
     <style name="FxAccountHeaderItem" parent="@style/FxAccountTextItem">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">24sp</item>
-        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:textSize">28sp</item>
+        <item name="android:layout_margin">0dp</item>
     </style>
 
     <style name="FxAccountSubHeaderItem" parent="@style/FxAccountTextItem">
@@ -44,7 +43,8 @@
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center_horizontal</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_marginBottom">10dp</item>
     </style>
 
     <style name="FxAccountLinkItem" parent="@style/FxAccountTextItem">
@@ -56,10 +56,11 @@
     <style name="FxAccountButton" parent="@android:style/Widget.Button">
         <item name="android:background">@drawable/fxaccount_button_background</item>
         <item name="android:textColor">@drawable/fxaccount_button_color</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">24sp</item>
         <item name="android:padding">20dp</item>
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">10dp</item>
     </style>
 
     <style name="FxAccountEditItem" parent="@android:style/Widget.EditText">
