--- a/res/values/fxaccount_styles.xml
+++ b/res/values/fxaccount_styles.xml
@@ -35,7 +35,8 @@
 
     <style name="FxAccountSubHeaderItem" parent="@style/FxAccountTextItem">
         <item name="android:textSize">20sp</item>
-        <item name="android:layout_marginBottom">45dp</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginBottom">20dp</item>
     </style>
 
     <style name="FxAccountTextItem" parent="@android:style/TextAppearance.Medium">
@@ -94,11 +95,8 @@
     <style name="FxAccountErrorItem">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_marginBottom">10dp</item>
-        <item name="android:layout_marginLeft">@dimen/fxaccount_corner_radius</item>
-        <item name="android:layout_marginRight">@dimen/fxaccount_corner_radius</item>
-        <item name="android:layout_marginTop">30dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_gravity">left</item>
+        <item name="android:gravity">center_horizontal</item>
         <item name="android:background">@drawable/fxaccount_textview_error_background</item>
         <item name="android:padding">5dp</item>
         <item name="android:text">Error</item>
@@ -118,7 +116,6 @@
         <item name="android:orientation">vertical</item>
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginBottom">20dp</item>
     </style>
 
 </resources>
