Bug 965376 - Update SignIn activity.

--- a/res/layout/fxaccount_create_account.xml
+++ b/res/layout/fxaccount_create_account.xml
@@ -51,8 +51,7 @@
 
         <TextView
             android:id="@+id/remote_error"
-            style="@style/FxAccountErrorItem"
-            android:layout_marginTop="10dp" />
+            style="@style/FxAccountErrorItem" />
 
         <FrameLayout style="@style/FxAccountButtonLayout" >
 
