--- a/res/layout/fxaccount_status.xml
+++ b/res/layout/fxaccount_status.xml
@@ -21,7 +21,7 @@
 
         <TextView
             android:id="@+id/email"
-            style="@style/FxAccountSubHeaderItem" >
+            style="@style/FxAccountTextItem" >
         </TextView>
 
         <TextView
