Bug 966386 - Part 7: Add "Back to browsing" buttons to ConfirmAccount and VerifiedAccount.

--- a/res/layout/fxaccount_account_verified.xml
+++ b/res/layout/fxaccount_account_verified.xml
@@ -27,10 +27,14 @@
 
         <TextView
             style="@style/FxAccountTextItem"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="40dp"
             android:text="@string/fxaccount_account_verified_description"
-            android:textSize="18sp" >
-        </TextView>
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/button"
+            style="@style/FxAccountButton"
+            android:text="@string/fxaccount_back_to_browsing" />
 
         <LinearLayout style="@style/FxAccountSpacer" />
 
