--- a/res/layout/fxaccount_sign_in.xml
+++ b/res/layout/fxaccount_sign_in.xml
@@ -61,6 +61,13 @@
                 android:text="@string/fxaccount_sign_in_create_account_instead" />
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/policy"
+            style="@style/FxAccountLinkifiedItem"
+            android:layout_marginTop="10dp"
+            android:text="@string/fxaccount_create_account_policy_text"
+            android:textColorLink="@color/fxaccount_linkified_textColorLinkSubdued" />
+
         <LinearLayout style="@style/FxAccountSpacer" />
 
         <ImageView
