--- a/res/layout/fxaccount_create_account.xml
+++ b/res/layout/fxaccount_create_account.xml
@@ -41,6 +41,7 @@
         <TextView
             android:id="@+id/policy"
             style="@style/FxAccountLinkifiedItem"
+            android:layout_marginBottom="0dp"
             android:layout_marginTop="10dp"
             android:text="@string/fxaccount_create_account_policy_text"
             android:textColorLink="@color/fxaccount_linkified_textColorLinkSubdued" />
@@ -49,17 +50,21 @@
             android:id="@+id/remote_error"
             style="@style/FxAccountErrorItem" />
 
-        <FrameLayout style="@style/FxAccountButtonLayout" >
+        <RelativeLayout style="@style/FxAccountButtonLayout" >
 
             <ProgressBar
                 android:id="@+id/progress"
-                style="@style/FxAccountProgress" />
+                style="@style/FxAccountProgress"
+                android:layout_alignBottom="@id/button"
+                android:layout_alignLeft="@id/button"
+                android:layout_alignRight="@id/button"
+                android:layout_alignTop="@id/button" />
 
             <Button
                 android:id="@+id/button"
                 style="@style/FxAccountButton"
                 android:text="@string/fxaccount_create_account_button" />
-        </FrameLayout>
+        </RelativeLayout>
 
         <CheckBox
             android:id="@+id/choose_what_to_sync_checkbox"
