--- a/res/layout/fxaccount_create_account.xml
+++ b/res/layout/fxaccount_create_account.xml
@@ -25,14 +25,14 @@
         <TextView
             style="@style/FxAccountTextItem"
             android:layout_marginTop="10dp"
-            android:text="@string/fxaccount_create_account_password_length_restriction" />
+            android:text="@string/fxaccount_create_account_password_length_restriction"
+            android:textColor="@color/fxaccount_textColorSubdued" />
 
         <!-- Per http://stackoverflow.com/questions/2359176/android-edittext-onclicklistener, not allowing focus allows us to highjack the click. -->
 
         <EditText
             android:id="@+id/year_edit"
             style="@style/FxAccountEditItem"
-            android:layout_marginTop="10dp"
             android:drawableRight="@drawable/fxaccount_ddarrow_inactive"
             android:focusable="false"
             android:hint="@string/fxaccount_create_account_year_of_birth"
@@ -50,7 +50,9 @@
             android:id="@+id/remote_error"
             style="@style/FxAccountErrorItem" />
 
-        <RelativeLayout style="@style/FxAccountButtonLayout" >
+        <RelativeLayout
+            style="@style/FxAccountButtonLayout"
+            android:layout_marginBottom="10dp" >
 
             <ProgressBar
                 android:id="@+id/progress"
